fortitude/src/message/snapshots/fortitude__message__grouped__tests__show_source.snap
---
source: fortitude/src/message/grouped.rs
expression: content
snapshot_kind: text
---
star_kind.f90:
  1:8 T021 integer*4 is non-standard, use integer(4)
    |
  1 | integer*4 foo; end
    |        ^ T021
    |
  
test.f90:
  6:5 S201 'implicit none' set on the enclosing module
    |
  4 | contains
  5 |   subroutine foo
  6 |     implicit none
    |     ^^^^^^^^^^^^^ S201
  7 |   end subroutine
  8 | end module
    |
    = help: Remove unnecessary 'implicit none'
  
  7:3 S061 end statement should read 'end subroutine foo'
    |
  5 |   subroutine foo
  6 |     implicit none
  7 |   end subroutine
    |   ^^^^^^^^^^^^^^ S061
  8 | end module
    |
